# projectctl

./: .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  \  build.rs  package-lock.json
.cargo/: config.toml
.github/workflows/: build-test.yml  build.yml  cache.yml  ci.yml  commitlint.yml  lint.yml  release.yml
examples/: projectctl.yml
examples/templates/: Cargo.toml.liquid
resources/main/: config.schema.json
resources/main/examples/: local.yml  project.yml
resources/main/hooks/: bash  zsh
resources/test/config/: cfg1.yml  cfg2.yml
src/: cfg.rs  cli.rs  cmd.rs  consts.rs  digest.rs  err.rs  fs.rs  git.rs  log.rs  main.rs  model.rs  paths.rs  render.rs  renderer.rs  script.rs  sys.rs  utils.rs
src/cmd/: destroy.rs  env.rs  hook.rs  mod.rs  new.rs
tests/: cli.rs
