[package]
name = "projectctl"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "CLI tool to manage project"
authors = ["Guillaume Leroy <pro.guillaume.leroy>"]
repository = "https://github.com/leroyguillaume/projectctl"
categories = ["command-line-utilities"]
keywords = ["templating", "project", "lifecycle"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
exitcode = "1.1"
fs2 = "0.4"
git2 = "0.15"
home = "0.5"
jsonschema = "0.16"
liquid = "0.26"
log = { version = "0.4", features = ["std"] }
openssl = { version = "0.10", features = ["vendored"] }
regex = "1.7"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.3"

[dev-dependencies]
rand = "0.8"
stub_trait = "1.0"

[build-dependencies]
git2 = "0.15"
openssl = { version = "0.10", features = ["vendored"] }
regex = "1.7"
